--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <main>
     <div class="qrcard">
-      <img src="images/image-qr-code.png" alt="QrCode" style="width:100%">
-      <p class="header">Improve your front-end skills by building projects</p>
+      <img src="images/image-qr-code.png" alt="QrCode">
+      <h1 class="header">Improve your front-end skills by building projects</h1>
       <p class="content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   </main>
